@@ -9,5 +9,6 @@ deps=
     greenlet
     redis
     pymemc
+    pyopenssl
 commands=
     python ./run-tests.py []
